--- a/src/scss/custom.scss
+++ b/src/scss/custom.scss
@@ -1,1 +1,8 @@
 // custom css here
+
+.admin-schedule .v-data-table__wrapper{
+    overflow: scroll;
+}
+.admin-schedule table{
+    width: 400%!important;
+}
